# rea-extract

./: .gitignore  Dockerfile  build.sh  extract.sh  profile.sh  rea-extract.cabal  stack.yaml
src/: DbStore.hs  Geocoding.hs  Main.hs  Models.hs  ParsingUtils.hs  PriceParsing.hs  ResultsParsing.hs  SoldResultsParsing.hs
test/: PriceParsingSpec.hs
