name:                rea-extract
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/rea#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     PriceParsing
  build-depends:       base >= 4.7 && < 5
                        , tagsoup == 0.13.10
                        , HTTP == 4000.3.3
                        , regex-tdfa == 1.2.2
                        , text == 1.2.2.1
                        , time == 1.6.0.1
                        , directory == 1.2.6.2
                        , aeson == 1.1.0.0
                        , utf8-string == 1.0.1.1
                        , sqlite-simple == 0.4.12.1
                        , split == 0.2.3.1
                        , tagsoup-selection == 0.1.0.1
                        , MissingH == 1.4.0.1
                        , strptime == 1.0.10
                        , streaming == 0.1.4.3
                        , mongoDB == 2.3.0

executable rea-extract
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:         DbStore
                       , Geocoding
                       , PriceParsing
                       , ResultsParsing
  build-depends:       base >= 4.7 && < 5
                        , tagsoup == 0.13.10
                        , HTTP == 4000.3.3
                        , regex-tdfa == 1.2.2
                        , text == 1.2.2.1
                        , time == 1.6.0.1
                        , directory == 1.2.6.2
                        , aeson == 1.1.0.0
                        , utf8-string == 1.0.1.1
                        , sqlite-simple == 0.4.12.1
                        , split == 0.2.3.1
                        , tagsoup-selection == 0.1.0.1
                        , MissingH == 1.4.0.1
                        , strptime == 1.0.10
                        , streaming == 0.1.4.3
                        , mongoDB == 2.3.0

test-suite hspec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  build-depends: base
               , rea-extract
               , hspec
               , QuickCheck
  hs-source-dirs: test
  default-language: Haskell2010
