name:                rea-extract
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/rea#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ld-options:          -static
  default-language:    Haskell2010
  exposed-modules:     PriceParsing
  build-depends:       base >= 4.7 && < 5
                        , tagsoup == 0.13.10
                        , HTTP == 4000.3.12
                        , regex-tdfa == 1.2.3.1
                        , text == 1.2.3.0
                        , time == 1.8.0.4
                        , directory == 1.3.3.0
                        , filepath == 1.4.1.2
                        , aeson == 1.3.0.0
                        , utf8-string == 1.0.1.1
                        , split == 0.2.3.3
                        , tagsoup-selection == 0.1.0.1
                        , MissingH == 1.4.0.1
                        , strptime == 1.0.10
                        , streaming == 0.2.1.0
                        , mongoDB == 2.3.0.5
                        , spawn == 0.3
                        , validation == 1
                        , safe == 0.3.17
                        , transformers == 0.5.5.0

executable rea-extract
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
--  ld-options:          -static
  ghc-options:         -threaded
  other-modules:         DbStore
                       , PriceParsing
                       , ResultsParsing
                       , Models
                       , ParsingUtils
                       , SoldResultsParsing
  build-depends:       base >= 4.7 && < 5
                      , tagsoup == 0.13.10
                      , HTTP == 4000.3.12
                      , regex-tdfa == 1.2.3.1
                      , text == 1.2.3.0
                      , time == 1.8.0.4
                      , directory == 1.3.3.0
                      , filepath == 1.4.1.2
                      , aeson == 1.3.0.0
                      , utf8-string == 1.0.1.1
                      , split == 0.2.3.3
                      , tagsoup-selection == 0.1.0.1
                      , MissingH == 1.4.0.1
                      , strptime == 1.0.10
                      , streaming == 0.2.1.0
                      , mongoDB == 2.3.0.5
                      , spawn == 0.3
                      , validation == 1
                      , safe == 0.3.17
                      , transformers == 0.5.5.0

test-suite hspec
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  build-depends: base
               , rea-extract
               , hspec
               , QuickCheck
  hs-source-dirs: test
  default-language: Haskell2010
